fix wrong extension in files xml -> yml modify Materials/MaterialsList_CrystalCandidates.yml Materials/Richer_DB.yml

--- a/Materials/MaterialsList_CrystalCandidates.yml
+++ b/Materials/MaterialsList_CrystalCandidates.yml
@@ -60,10 +60,10 @@ workflow:
     - group:
       - outputname: chooseMaterialsList
         outputtype: function
-      - outputname: chooseMaterialsCategory
-        outputtype: function
+#      - outputname: chooseMaterialsCategory
+#        outputtype: function
     - group:
-      - methodname: queryAttributeCrystalsOfExistingMaterials
+      - methodname: queryAttributeCrystalsOfMaterials
         methodtype: function
         outputname: existingCrystals
         outputtype: parts
