correct newmaterial_below_criterion

--- a/sample/Materials2/Richer_DB.yml
+++ b/sample/Materials2/Richer_DB.yml
@@ -15,11 +15,11 @@ workflow:
       - outputname: AttributeCrystalOfNewMaterial
         outputtype: parts
     - group:
-      - methodname: storeNewMaterialInMaterialsList
+      - methodname: NewMaterialBelowCriterion
         methodtype: function
 #        applymethodname: MaterialsDatabase
 #        applymethodtype: method
-        outputname: updateMaterialsList
+        outputname: get_NewMaterialBelowCriterion
         outputtype: function
     - group:
       - methodname: MaterialsDatabase
