new Materials3 completed

--- a/sample/Materials3/AtomicProperty_CausBottom.yml
+++ b/sample/Materials3/AtomicProperty_CausBottom.yml
@@ -10,9 +10,9 @@ workflow:
         outputname: crystal
         outputtype: parts
     - group:
-      - methodname: AttributeAtomicCoordinate
+      - methodname: AttributeAtomicCoordinates
         methodtype: method
-        outputname: AtomicCoordinate
+        outputname: AtomicCoordinates
         outputtype: parts
 
   - blockname: crystal
