--- a/sample/DescriptorTargetVariable2/bottom_wf.yml
+++ b/sample/DescriptorTargetVariable2/bottom_wf.yml
@@ -3,21 +3,21 @@ workflow:
   - blockname: crystal to each element
     list:
     - group:
-      - methodname: crystal
+      - methodname: crystal way
         outputname: a crystal
     - group:
-      - methodname: Crystal translational vector crystal attribute
+      - methodname: Crystal translational vector crystal attribute way
         outputname: crystal lattice
-      - methodname: Atomic position crystal attribute
+      - methodname: Atomic position crystal attribute way
         outputname: atomic position of each atom
     - group:
       - methodname: Crystal extended position way
         outputname: extended atomic position list
       - outputname: element of each atom
     - group: 
-      - methodname: Persistent homology
+      - methodname: Persistent homology way
         outputname: persistent diagram
-      - methodname: Space group finder
+      - methodname: Space group finder way
         outputname: space group
 
   - blockname: relative extended atomic positions -> SNAP
@@ -198,9 +198,9 @@ workflow:
       - outputname: J_4f of each atom
       - outputname: g_J of each atom
     - group:
-      - methodname: (g_J-1)J_4f
+      - methodname: (g_J-1)J_4f way
         outputname: spin direction projected J_4f of each atom
-      - methodname: (2-g_J)J_4f
+      - methodname: (2-g_J)J_4f way
         outputname: orbital direction projected J_4f of each atom
 
   - blockname: isolated atom to wavefunction related values
@@ -221,13 +221,13 @@ workflow:
         outputname: f-orbital of each atom
       - methodname: total energy selection way
         outputname: total energy of each atom
-      - methodname: s-orbital energy selection
+      - methodname: s-orbital energy selection way
         outputname: s-orbital energy of each atom
-      - methodname: p-orbital energy selection
+      - methodname: p-orbital energy selection way
         outputname: p-orbital energy of each atom
-      - methodname: d-orbital energy selection
+      - methodname: d-orbital energy selection way
         outputname: d-orbital energy of each atom
-      - methodname: f-orbital energy selection
+      - methodname: f-orbital energy selection way
         outputname: f-orbital energy of each atom
 
   - blockname: s-orbital to r^2
